Fix sticky header z-index lower than the actions timeline

--- a/init/static/css/base.css
+++ b/init/static/css/base.css
@@ -79,7 +79,7 @@ input.aci, input.aci:focus {
 	background-color: white !important;
 	position: fixed;
 	top: 3em;
-	z-index: 1;
+	z-index: 2;
 }
 
 .im:before {
